--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <i id="facebookI" class='bx bxl-facebook-square'></i>
                  Facebook
             </a>
-            <a href="https://wa.me/qr/3RUL4RBMNWGNC1" target="_blank" class="link whatsappT">
+            <a href="https://wa.me/qr/X3FAZIGKZY26F1" target="_blank" class="link whatsappT">
               <i id="whatsappI" class='bx bxl-whatsapp-square'></i>
                WhatsApp
             </a>
