--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <canvas id="snowCanvas"></canvas>
   <canvas id="snowCanvasC"></canvas>
     <div class="container">
-        <img src="IMG-20250319-WA0006.jpg" alt="Profile Picture" class="profile-img">
+        <div class="img-cont"></div>
         <h2 class="username"><span>MR</span> KHUSDIL</h2>
         
         <div class="links">
